public/scss/custom.scss
/* ... */
.form-group label {
    font-weight: bold;
}

#clear-search{
    cursor:pointer;
}


@media (min-width: 1200px) {
    .container {
        max-width: 1240px;
    }
}

@each $color,
$value in $theme-colors {
    .text-shadow-#{$color} {
        text-shadow: 2px 2px 15px $value;
    }
}

@each $color,
$value in $theme-colors {
    .border-top-#{$color}-5 {
        border-top: solid 5px $value;
    }
}

body {
    background-color: #f1f1f1;
    font-family: 'Roboto', sans-serif;
}

.overflow-hidden {
    overflow: hidden;
}

.bg-inherit {
    background-color: inherit;
}

.content-pre-wrap {
    white-space: pre-wrap;
}

////////////////////////////////////////////////////////////////////////////////////////////////
// TYPOGRAPHY
////////////////////////////////////////////////////////////////////////////////////////////////

@font-face {
    font-family: milkshake;
    src: url('/font/Milkshake.otf');
}

.milkshake{
    font-family: milkshake;
}

h1, h2, h3, h4, h5, h6, .btn {
    font-family: 'Raleway', sans-serif;
}

.navbar-light .navbar-nav .nav-item:hover {
    background-color: lighten($color: $slw-primary, $amount: 20%)
}
.navbar-light.transparent .navbar-nav .nav-item:hover {
    background-color: inherit;
}

@include media-breakpoint-down(md) {
    .navbar-light .navbar-nav .nav-link {
        text-align: center;
        font-size:1.3rem;
    }
}
  
@include media-breakpoint-up(lg) {
    // .display-1 {
    //     font-size: 4rem;
    // }
    .display-2 {
        font-size: 3.2rem;
    }
    .display-3 {
        font-size: 2.6rem;
    }
    .display-4 {
        font-size: 2.2rem;
    }
    .img-prompt {
        height: 300px;
    }
    .img-prompt-small {
        height: 60px;
    }
}

@include media-breakpoint-down(md) {
    .display-1 {
        font-size: 4rem;
    }
    .display-2 {
        font-size: 2.6rem;
    }
    .display-3 {
        font-size: 2.2rem;
    }
    .display-4 {
        font-size: 1.8rem;
    }
    .img-prompt {
        height: 200px;
    }
    .img-prompt-small {
        height: 60px;
    }
}

@include media-breakpoint-down(sm) {
    h1 {
        font-size: 1.8rem;
    }
    .display-1 {
        font-size: 2.6rem;
    }
    .display-2 {
        font-size: 1.8rem;
    }
    .display-3 {
        font-size: 1.4rem;
    }
    .display-4 {
        font-size: 1rem;
    }
    .img-prompt{
        height: 150px;
    }
    .img-prompt-small {
        height: 60px;
    }
    .splash-text p {
        font-size: 0.92rem;
    }
}
  



.text-small {
    font-size: 0.8rem;
}

.text-xsmall {
    font-size: 0.6rem;
}
////////////////////////////////////////////////////////////////////////////////////////////////


.zindex-pop {
    z-index: $zindex-dropdown;
}

.hamb-menu {
    color: black;
    font-size: 1.8rem;
}

.transparent .hamb-menu {
    color: white;
}

.navbar {
    box-shadow: none;
    border-bottom: solid 1px $slw-pale-gray;
}

.navbar.navbar-light.main-header.transparent.collapsed .navbar-nav a {
    color: white;
    // font-family: "raleway";
}


.navbar-light .navbar-nav .nav-link,
.navbar.navbar-light .breadcrumb .nav-item .nav-link:hover,
.navbar.navbar-light .navbar-nav .nav-item .nav-link:hover {
    color: rgba(0, 0, 0, 1);
    font-family: "raleway";
}

.navbar.navbar-light.main-header.transparent.collapsed {
    box-shadow: none;
    background-color: transparent;
    border-bottom: none;
    transition: background-color 0.5s linear, border-bottom 0.5s linear;
}

.navbar.navbar-light.main-header.transparent {
    box-shadow: none;
    background-color: white;
    border-bottom: solid 1px $slw-pale-gray;
    transition: background-color 0.5s linear, border-bottom 0.5s linear;
}

.navbar.navbar-light.main-header {
    transition: background-color 0.5s linear, border-bottom 0.5s linear;
}

.nav-bar-slide-in {
    width: 0;
    overflow: hidden;
    transition: width 1s linear;
}

.image-brand {
    width: 120px;
    height: 28px;
    margin: -3px 0 -2px 0;
    display: inline-block;
    background-image: url('/images/logonameBlack.svg');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

footer .image-brand {
    background-image: url('/images/logonameBlack.svg');
    width: 140px;
    height: 48px;
}

footer hr {
    border-top: 1px solid #e6e6e6;
}

footer label {
    font-size: 0.8rem;
}

footer .form-group {
    margin-top: 0.5rem;
}

footer .form-control {
    color: $slw-darker;
    background-color: $slw-pale-gray;
    border: 1px solid lighten($slw-pale-gray, 25%);
    border-radius: .25rem;
}

footer .form-control:focus {
    color: $slw-darker;
    background-color: $slw-pale-gray;
    border-color: #80d445;
    box-shadow: 0 0 0 0.2rem rgba(68, 124, 29, 0.25);
}

.collapsed.transparent .image-brand {
    background-image: url('/images/logonameWhite.svg');
}

#company-list-collapse.collapse.show {
    display: flex !important;
}

.collapsible .chevron {
    -ms-transform: rotate(20deg);
    /* IE 9 */
    -webkit-transform: rotate(20deg);
    /* Safari */
    transform: rotate(20deg);
}

.transparent .image-brand {
    background-image: url('/images/logonameBlack.svg');
}

.step-indicator-lg {
    height: 5rem;
    width: 5rem;
}

.step-indicator-lg h1 {
    font-size: 2.5rem;
}

.step-indicator-md {
    height: 3rem;
    width: 3rem;
}

.step-indicator-sm {
    height: 1.7rem;
    width: 1.7rem;
}

.step.active .step-wrapper {
    background-color: white !important;
}
/* ... */

